<resources>
    <string name="app_name">Direct chat</string>

    <string name="rate_this_app">Rate this app</string>
    <string name="share_app">Share App</string>
    <string name="developer">Developer</string>
    <string name="app_info">App info</string>
    <string name="mode">Night Mode</string>

    <string name="version">Version: 1.0.9</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_source_licences">Open-source licences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark mode</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>

    <string name="share_app_link">Direct Chat:-"+"https://play.google.com/store/apps/details?id=com.ayush.directchat</string>
    <string name="rate_app_link">https://play.google.com/store/apps/details?id=com.ayush.directchat</string>
    <string name="share_using">Share using</string>
    <string name="terms_conditions">https://ayushprajapati.blogspot.com/p/direct-chat-terms-conditions.html</string>
    <string name="policy">https://ayushprajapati.blogspot.com/p/direct-chat.html</string>

    <string name="developed_and_designed_by">Developed and Designed by</string>
    <string name="ayush_prajapati">Ayush Prajapati</string>
    <string name="support">SUPPORT</string>
    <string name="provide_feedback">Provide feedback</string>
    <string name="phone">Mobile</string>
    <string name="message_optional">Message (optional)</string>
    <string name="todo">TODO</string>
    <string name="send">Send</string>
    <string name="how_to_use_message">Enter or Copy-paste a phone number to which you\'d like to send message.</string>

</resources>
