<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragments.MenuFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/logo"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/logo"/>

                    <TextView
                        android:id="@id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/logo"
                        android:padding="20dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textview_Mode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:clickable="true"
                                android:layout_weight="2"
                                android:focusable="true"
                                android:padding="20dp"
                                android:text="@string/dark_mode"
                                android:textColor="@color/colorAccent" />

                            <Switch
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/darkModeSwitch"
                                android:layout_weight="2"></Switch>


                        </LinearLayout>

                        <TextView
                            android:id="@+id/textview_version"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="20dp"
                            android:text="@string/version"
                            android:textColor="@color/colorAccent" />


                        <TextView
                            android:id="@+id/textviewShareApp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="20dp"
                            android:text="@string/share_app"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/textviewRateApp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="20dp"
                            android:text="@string/rate_this_app"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/textviewDeveloper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="20dp"
                            android:text="@string/developer"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/textview_privacy_policy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="20dp"
                            android:text="@string/privacy_policy"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/textview_terms_conditions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="20dp"
                            android:text="@string/terms_amp_conditions"
                            android:textColor="@color/colorAccent" />


                        <TextView
                            android:id="@+id/textview_open_source"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="20dp"
                            android:text="@string/open_source_licences"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>